# TFT

./: CMakeLists.txt
src/: main.cpp
src/Action/: Action.cpp  Action.h  AttackAction.cpp  AttackAction.h  MoveAction.cpp  MoveAction.h  WaitAction.cpp  WaitAction.h
src/Character/: Character.cpp  Character.h  GameObject.h
src/Strategy/: AttackClosestEnemyStrategy.cpp  AttackClosestEnemyStrategy.h  Strategy.h
src/Tiles/: PathFinding.cpp  PathFinding.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h
